--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "bad-words": "^3.0.4",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
@@ -21,6 +22,7 @@
     "express": "^4.18.2",
     "express-handlebars": "^6.0.7",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
     "sequelize": "^6.28.0",
