--- a/app/config/config.json
+++ b/app/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "172002",
+    "password": "hieu12345",
     "database": "chatapp",
     "host": "127.0.0.1",
     "dialect": "mysql",
