--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "moment": "^2.29.4",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
+    "pg": "^8.11.0",
+    "postgres": "^3.3.5",
     "qs": "^6.11.2",
     "sequelize": "^6.28.0",
     "socket.io": "^4.6.1"
